Fri Jan 24 21:33:25 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/config.c applied 1-line patch from Craig A. Berry

Fri Jan 24 17:43:26 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h: add some macro required for Python

Fri Jan 24 16:30:51 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: added a FIXME

Fri Jan 24 11:35:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: small updates

Thu Jan 23 18:02:24 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated

Thu Jan 23 16:53:26 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html doc/tds7.txt:
	- removed tds7.txt (mainly duplicated in tds.html)

Thu Jan 23 15:44:47 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html include/tds.h:
	- update collate information from some mail

Thu Jan 23 14:28:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* README: update URLs

Thu Jan 23 11:03:32 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* BUGS: update a bit

Thu Jan 23 10:56:06 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt: update ODBC status

Wed Jan 22 15:56:39 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt updated db-lib status with Sybase's functions

Wed Jan 22 15:23:32 EST 2003    JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c _bcp_exec_out(): no output for null columns 
	* src/dblib/dblib.c dbconvert(): do not initialize dest if destlen = -1

Tue Jan 21 14:06:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: add SQLEndTran function

Mon Jan 20 18:02:27 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: check for long double type

Fri Jan 17 14:20:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updates
	* freetds.spec.in: add --enable-threadsafe for build rpm
	* src/odbc/odbc.c: SQLGetTypeInfo small change
